# powerbi-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  goal.md
.beads/: .gitignore  config.yaml  issues.jsonl
.github/workflows/: ci.yml
agent_ergonomics_audit/: EVIDENCE.md  HANDOFF.md  IMPROVEMENTS.md  README.md  SCORECARD.md
docs/: clean-room-research.md  desktop-acceptance-everything.md  microsoft-powerbi-agentic-integration-plan.md  pbir-desktop-oracle.md  porting-analysis.md  roadmap.md  source-profile-workflow.md
examples/: sales.dashboard.json  sales.profile.json  sales.schema.json
src/: bridge.rs  calculated_columns.rs  child_process.rs  cli.rs  cli_support.rs  contract.rs  dax_execute.rs  desktop.rs  desktop_session.rs  desktop_target.rs  diff.rs  doctor.rs  feature_catalog.rs  fixture.rs  handoff.rs  inspect.rs  lint.rs  live_model.rs  main.rs  mcp.rs  measures.rs  microsoft.rs  model.rs  model_advanced.rs  model_dax.rs  model_live.rs  package.rs  partitions.rs  pbir.rs  pbir_bindings.rs  pbir_bookmarks.rs  pbir_filters.rs  pbir_interactions.rs  pbir_slicers.rs  pbir_themes.rs  pbir_visual_factory.rs  profile.rs  project_io.rs  rebind_plan.rs  relationship_tmdl.rs  (+44 more)
tests/: cli_contract.rs  cli_smoke.rs  dashboard_build.rs  desktop_acceptance_everything.rs  desktop_bridge.rs  diff.rs  fixture.rs  microsoft_integrations.rs  microsoft_report_exact.rs  microsoft_report_validation.rs  model_calculated_columns.rs  model_measures.rs  model_partitions_handoff.rs  model_relationships.rs  model_static_tables.rs  parity_tranche.rs  report.rs  report_authoring.rs
(+80 files in other folders)
