[package]
name = "powerbi-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "powerbi-cli"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
zip = { version = "4.6.1", default-features = false, features = ["deflate", "deflate64"] }

[dev-dependencies]
tempfile = "3.10"
