[package]
name = "powerbi-cli"
version = "0.1.0"
edition = "2024"
description = "Deterministic, agent-friendly Power BI PBIP/PBIR/TMDL authoring and validation CLI"
license = "MIT"
repository = "https://github.com/odcpw/powerbi-cli"
include = [
    "/src/**",
    "/integrations/microsoft/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
]

[[bin]]
name = "powerbi-cli"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
cap-std = "=4.0.2"
cap-fs-ext = "=4.0.2"
command-group = "=5.0.1"
file-id = "=0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = { version = "=0.39.6", default-features = false, features = ["system"] }
tempfile = "3.10"
walkdir = "2.5"
zip = { version = "4.6.1", default-features = false, features = ["deflate", "deflate64"] }
